# project1

./: .env.example  92.py  9_2_live.py  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  mylog.txt  pd_transactions.py  processing.py  utils.py  widget.py
tests/: main.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_pd_transactions.py  test_processing.py  test_utils.py  test_widget.py
