[project]
name = "homework-9-1-poetry"
version = "0.0.1"
description = "homework"
authors = [
    {name = "Ruslan Gamidov"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.16.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"
pytest = "^8.4.1"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'